--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
   </head>
   <body>
     Hello world
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas rerum
+      praesentium officia quam tenetur harum eligendi! Laborum eveniet,
+      laudantium ut aliquid tenetur repellendus non sunt, debitis, ipsum natus
+      autem laboriosam.
+    </p>
   </body>
 </html>
